[gd_scene load_steps=10 format=1]

[ext_resource path="res://src/nd_learn.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/particular/blue_button13.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/particular/blue_button04.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/cocogoose_trial.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sprites/particular/g4601.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

font/size = 50
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

font/size = 55
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]

font/size = 45
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="Animation" id=4]

resource/name = "view_learn"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="nd_learn" type="Node2D"]

visibility/visible = false
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="txb_training_1" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 229.0
margin/right = 654.0
margin/bottom = 376.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="txb_training_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 561.0
margin/bottom = 147.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "JavaScript basic"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame" type="TextureFrame" parent="txb_training_1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 181.0
margin/top = -48.0
margin/right = 367.0
margin/bottom = 17.0
texture = ExtResource( 5 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="txb_training_2" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 445.0
margin/right = 654.0
margin/bottom = 592.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="txb_training_2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 567.0
margin/bottom = 137.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Redes basic"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame" type="TextureFrame" parent="txb_training_2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 181.0
margin/top = -50.0
margin/right = 367.0
margin/bottom = 15.0
texture = ExtResource( 5 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="txb_back" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 19.0
margin/top = 1103.0
margin/right = 309.0
margin/bottom = 1225.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="txb_back"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 28.0
margin/top = 22.0
margin/right = 221.0
margin/bottom = 88.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "volver"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="anp_learn" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/view_learn = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


